--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,12 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>React App</title>
+  <link rel="stylesheet" href="dashboard.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-    crossorigin="anonymous">
+  crossorigin="anonymous">
+  <link rel="stylesheet" href="group.css">
+  <link rel="stylesheet" href="style.css">
+  
 </head>
 
 <body>
